--- a/stable/home-assistant/values.yaml
+++ b/stable/home-assistant/values.yaml
@@ -3,8 +3,8 @@
 # Declare variables to be passed into your templates.
 
 image:
-  repository: homeassistant/home-assistant
-  tag: 0.108.7
+  repository: odoo/odoo
+  tag: 14
   pullPolicy: IfNotPresent
   pullSecrets: []
 
